--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- 헤더 -->
   <header>
     <div class="title">
-      <img src="https://cdn.imweb.me/thumbnail/20250313/3f19e53e96d2a.png" alt="Logo">
+      <img src="https://raw.githubusercontent.com/boundary-x/ai_teachable_machine/refs/heads/main/boundaryx_logo.png" alt="Logo">
       AI 모델학습
     </div>
     <a href="#" class="back-button">돌아가기</a>
