--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
     <section class="controls">
       <div class="control-group">
         <h3>📷 카메라 설정</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>☝️STEP1 - 카메라 버튼을 통해 카메라를 설정해주세요</p>
         <div id="camera-control-buttons" class="button-group"></div>
       </div>
       <div class="control-group">
         <h3>📡 블루투스 연결</h3>
-        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>✌️STEP2 - 블루투스 연결 버튼을 클릭해 마이크로비트를 연결해주세요</p>
         <div id="bluetoothStatus" class="status">상태: Disconnected</div>
         <div id="bluetooth-control-buttons" class="button-group"></div>
       </div>
       <div class="control-group">
         <h3>🤖 모델 로드</h3>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <p>👌STEP3 - 모델을 선택하거나 모델 주소를 입력 후 모델 로드 버튼을 클릭해주세요</p>
         <div id="model-select-and-link" class="model-selection"></div>
         <div id="model-key-container" class="model-key"></div>
         <div id="model-action-buttons" class="button-group"></div>
