--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="https://raw.githubusercontent.com/boundary-x/ai_teachable_machine/refs/heads/main/boundaryx_logo.png" alt="Logo">
       AI 모델학습
     </div>
-    <a href="#" class="back-button">돌아가기</a>
+    <a href="https://boundaryx.io/" class="back-button">돌아가기</a>
   </header>
 
   <!-- 메인 컨텐츠 -->
